--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -975,21 +975,17 @@
     "    | noise_slider(\"noise_slider\", \"Sensor noise =\", sensor_settings[\"s_noise\"])\n",
     "    | (\n",
     "        Plot.html([\n",
-    "            \"div\",\n",
-    "            {\"class\": \"flex flex-col gap-4\"},\n",
+    "            \"label\",\n",
+    "            {\"class\": \"flex items-center gap-2 cursor-pointer\"},\n",
     "            [\n",
-    "                \"label\",\n",
-    "                {\"class\": \"flex items-center gap-2 cursor-pointer\"},\n",
-    "                [\n",
-    "                    \"input\",\n",
-    "                    {\n",
-    "                        \"type\": \"checkbox\",\n",
-    "                        \"checked\": js(\"$state.show_target_pose\"),\n",
-    "                        \"onChange\": js(\"(e) => $state.show_target_pose = e.target.checked\")\n",
-    "                    }\n",
-    "                ],\n",
-    "                \"show target pose\"\n",
-    "            ]\n",
+    "                \"input\",\n",
+    "                {\n",
+    "                    \"type\": \"checkbox\",\n",
+    "                    \"checked\": js(\"$state.show_target_pose\"),\n",
+    "                    \"onChange\": js(\"(e) => $state.show_target_pose = e.target.checked\")\n",
+    "                }\n",
+    "            ],\n",
+    "            \"show target pose\"\n",
     "        ])\n",
     "        & Plot.html(js(\"`guess = Pose([${$state.guess.p.map((x) => x.toFixed(2))}], ${$state.guess.hd.toFixed(2)})`\"))\n",
     "        & Plot.html(js(\"`target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})`\"))\n",
@@ -1255,26 +1251,20 @@
     "        | noise_slider(\"model_noise\", \"Model/inference noise = \", sensor_settings[\"s_noise\"])\n",
     "        | (\n",
     "            Plot.html([\n",
-    "                \"div\",\n",
-    "                {\"class\": \"flex flex-col gap-4\"},\n",
-    "                [\n",
-    "                    \"button\",\n",
-    "                    {\n",
-    "                        \"class\": \"w-24 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 active:bg-blue-700\",\n",
-    "                        \"onClick\": on_camera_button(button_handler)\n",
-    "                    },\n",
-    "                    button_label\n",
-    "                ]\n",
+    "                \"button\",\n",
+    "                {\n",
+    "                    \"class\": \"w-24 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 active:bg-blue-700\",\n",
+    "                    \"onClick\": on_camera_button(button_handler)\n",
+    "                },\n",
+    "                button_label\n",
     "            ])\n",
-    "            & Plot.html([\n",
-    "                \"div\",\n",
+    "            & Plot.html(\n",
     "                Plot.js(\"\"\"`camera = Pose([${$state.camera.p.map((x) => x.toFixed(2))}], ${$state.camera.hd.toFixed(2)})`\"\"\")\n",
-    "            ])\n",
-    "            & Plot.html([\n",
-    "                \"div\",\n",
+    "            )\n",
+    "            & Plot.html(\n",
     "                Plot.js(\"\"\"$state.target_exists ?\n",
     "                                `target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})` : ''\"\"\")\n",
-    "            ])\n",
+    "            )\n",
     "            & bottom_elements\n",
     "        )\n",
     "        | Plot.initialState(\n",
@@ -1355,12 +1345,11 @@
     "        + pose_plots(js(\"$state.best\"), color=\"purple\")\n",
     "    ),\n",
     "    bottom_elements=(\n",
-    "        Plot.html([\n",
-    "            \"div\",\n",
+    "        Plot.html(\n",
     "            # For some reason `toFixed` very stubbonrly malfunctions in the following line:\n",
     "            Plot.js(\"\"\"$state.target_exists ?\n",
     "                                `best = Pose([${$state.best.p.map((x) => x.toFixed(2))}], ${$state.best.hd.toFixed(2)})` : ''\"\"\")\n",
-    "        ])\n",
+    "        )\n",
     "    ),\n",
     "    initial_state={\n",
     "        \"grid_poses\": {\"p\": [], \"hd\": []},\n",
@@ -2355,7 +2344,7 @@
     "        + Plot.color_map({\"some pose\": \"green\", \"with heading modified\": \"red\"})\n",
     "        + Plot.title(\"Modifying a heading\")\n",
     "    )\n",
-    "    | html(\"span.tc\", f\"score ratio: {rotated_trace_weight_diff}\")\n",
+    "    | html(f\"score ratio: {rotated_trace_weight_diff}\")\n",
     ")"
    ]
   },
@@ -2409,7 +2398,7 @@
     "        for pose in trace.get_retval()[1]\n",
     "    ]\n",
     "    + Plot.color_map({\"some path\": \"green\", \"with heading modified\": \"red\"})\n",
-    ") | html(\"span.tc\", f\"score ratio: {rotated_first_step_weight_diff}\")"
+    ") | html(f\"score ratio: {rotated_first_step_weight_diff}\")"
    ]
   },
   {
@@ -2647,7 +2636,7 @@
     "sample, log_weight = full_model.importance(\n",
     "    sub_key, constraints_low_deviation, (motion_settings_low_deviation, sensor_settings[\"s_noise\"])\n",
     ")\n",
-    "animate_full_trace(sample) | html(\"span.tc\", f\"log_weight: {log_weight}\")"
+    "animate_full_trace(sample) | html(f\"log_weight: {log_weight}\")"
    ]
   },
   {
@@ -2663,7 +2652,7 @@
     "sample, log_weight = full_model.importance(\n",
     "    sub_key, constraints_high_deviation, (motion_settings_high_deviation, sensor_settings[\"s_noise\"])\n",
     ")\n",
-    "animate_full_trace(sample) | html(\"span.tc\", f\"log_weight: {log_weight}\")"
+    "animate_full_trace(sample) | html(f\"log_weight: {log_weight}\")"
    ]
   },
   {
@@ -2771,9 +2760,9 @@
     "\n",
     "Plot.Row(*[\n",
     "    (\n",
-    "        html(\"div.f3.b.tc\", title)\n",
+    "        html(title)\n",
     "        | animate_full_trace(trace, frame_key=\"frame\")\n",
-    "        | html(\"span.tc\", f\"score: {score:,.2f}\")\n",
+    "        | html(f\"score: {score:,.2f}\")\n",
     "    )\n",
     "    for (title, trace, motion_settings, score) in (\n",
     "        [\n",
@@ -3315,10 +3304,10 @@
     "\n",
     "(\n",
     "    (\n",
-    "        html([\"div\", \"SIS on high motion-deviation data\"])\n",
+    "        html(\"SIS on high motion-deviation data\")\n",
     "        | plot_sis_result(path_high_deviation, sis_result)\n",
     "    ) & (\n",
-    "        html([\"div\", \"SIS on low motion-deviation data\"])\n",
+    "        html(\"SIS on low motion-deviation data\")\n",
     "        | plot_sis_result(path_low_deviation, sis_result)\n",
     "    )\n",
     ")"
@@ -3462,10 +3451,10 @@
     "\n",
     "(\n",
     "    (\n",
-    "        html([\"div\", [\"p\", \"SIS per se (no rejuvenation)\"], [\"p\", \"high motion-deviation data\"]])\n",
+    "        html(\"SIS per se (no rejuvenation)\", \"high motion-deviation data\")\n",
     "        | plot_sis_result(path_high_deviation, sis_result)\n",
     "    ) & (\n",
-    "        html([\"div\", [\"p\", \"SIS with SMCP3 grid rejuvenation\"], [\"p\", \"high motion-deviation data\"]])\n",
+    "        html(\"SIS with SMCP3 grid rejuvenation\", \"high motion-deviation data\")\n",
     "        | plot_sis_result(path_high_deviation, smcp3_result)\n",
     "    )\n",
     ")"
