--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -45,16 +45,14 @@
     "\n",
     "import json\n",
     "import genstudio.plot as Plot\n",
-    "import itertools\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import genjax\n",
-    "import os\n",
     "from genjax import SelectionBuilder as S\n",
     "from genjax import ChoiceMapBuilder as C\n",
     "from genjax.typing import Array, FloatArray, PRNGKey, IntArray\n",
     "from penzai import pz\n",
-    "from typing import Any, Iterable, TypeVar, Generic, Callable\n",
+    "from typing import TypeVar, Generic, Callable\n",
     "from genstudio.plot import js\n",
     "\n",
     "html = Plot.Hiccup"
@@ -2479,9 +2477,6 @@
    },
    "outputs": [],
    "source": [
-    "# HERE is a great place to update `sensor_settings[\"s_noise\"]` if you wish,\n",
-    "# about to construct some \"data\" using it.\n",
-    "\n",
     "motion_settings_low_deviation = {\n",
     "    \"p_noise\": 0.05,\n",
     "    \"hd_noise\": (1 / 10) * degrees,\n",
@@ -2651,11 +2646,11 @@
     "\n",
     "(\n",
     "    (\n",
-    "        html(\"fresh path sample\", \"fixed low-motion deviation sensor data\")\n",
+    "        html(\"fresh path sample\", \"fixed low motion-deviation sensor data\")\n",
     "        | animate_full_trace(trace_low, frame_key=\"frame\")\n",
     "        | html(f\"log_weight: {log_weight_low}\")\n",
     "    ) & (\n",
-    "        html(\"fresh path sample\", \"fixed high-motion deviation sensor data\")\n",
+    "        html(\"fresh path sample\", \"fixed high motion-deviation sensor data\")\n",
     "        | animate_full_trace(trace_high, frame_key=\"frame\")\n",
     "        | html(f\"log_weight: {log_weight_high}\")\n",
     "    )\n",
@@ -2761,11 +2756,11 @@
     "\n",
     "(\n",
     "    (\n",
-    "        html(\"integrated path from controls\", \"fixed low-motion deviation sensor data\")\n",
+    "        html(\"integrated path from controls\", \"fixed low motion-deviation sensor data\")\n",
     "        | animate_full_trace(trace_path_integrated_observations_low_deviation, frame_key=\"frame\")\n",
     "        | html(f\"log_weight: {log_weight_low}\")\n",
     "    ) & (\n",
-    "        html(\"integrated path from controls\", \"fixed high-motion deviation sensor data\")\n",
+    "        html(\"integrated path from controls\", \"fixed high motion-deviation sensor data\")\n",
     "        | animate_full_trace(trace_path_integrated_observations_high_deviation, frame_key=\"frame\")\n",
     "        | html(f\"log_weight: {log_weight_high}\")\n",
     "    )\n",
