Adjust motion deviation settings

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -1852,7 +1852,10 @@
     "\n",
     "# Set the motion settings\n",
     "degrees = jnp.pi / 180\n",
-    "default_motion_settings = {\"p_noise\": 0.5, \"hd_noise\": 10 * degrees}"
+    "default_motion_settings = {\n",
+    "    \"p_noise\": 0.15,\n",
+    "    \"hd_noise\": 1 * degrees\n",
+    "}"
    ]
   },
   {
@@ -2482,8 +2485,8 @@
     "    \"hd_noise\": (1 / 10) * degrees,\n",
     "}\n",
     "motion_settings_high_deviation = {\n",
-    "    \"p_noise\": 0.25,\n",
-    "    \"hd_noise\": 1 * degrees,\n",
+    "    \"p_noise\": 0.5,\n",
+    "    \"hd_noise\": 3 * degrees,\n",
     "}\n",
     "\n",
     "key, k_low, k_high = jax.random.split(key, 3)\n",
