Remove unnecessary blue

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2817,7 +2817,7 @@
     ") & (\n",
     "    world_plot\n",
     "    + [\n",
-    "        pose_plots(pose, color=\"blue\", opacity=0.1)\n",
+    "        pose_plots(pose, color=\"green\", opacity=0.1)\n",
     "        for pose in high_deviation_paths[:20]\n",
     "    ]\n",
     ")"
