Plot culled paths

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2955,21 +2955,37 @@
     "importance_resample = jax.jit(importance_resample_unjitted, static_argnums=(4, 5))\n",
     "\n",
     "\n",
-    "def path_to_polyline(path, **options):\n",
-    "    if len(path.p.shape) > 1:\n",
-    "        x_coords = path.p[:, 0]\n",
-    "        y_coords = path.p[:, 1]\n",
-    "        return Plot.line({\"x\": x_coords, \"y\": y_coords}, {\"curve\": \"linear\", **options})\n",
-    "    else:\n",
-    "        return Plot.dot([path.p], fill=options[\"stroke\"], r=2, **options)\n",
+    "def pytree_transpose(list_of_pytrees):\n",
+    "  \"\"\"\n",
+    "  Converts a list of pytrees of identical structure into a single pytree of lists.\n",
+    "  \"\"\"\n",
+    "  return jax.tree.map(lambda *xs: jnp.array(list(xs)), *list_of_pytrees)\n",
     "\n",
-    "def plot_inference_result(title, samples_label, posterior_paths, target_path):\n",
+    "def plot_inference_result(title, samples_label, posterior_paths, target_path, history_paths=None):\n",
     "    return (\n",
     "        html(*title)\n",
     "        | (\n",
     "            world_plot\n",
+    "            + (\n",
+    "                [\n",
+    "                    Plot.line(\n",
+    "                        {\"x\": path.p[:, 0], \"y\": path.p[:, 1]},\n",
+    "                        curve=\"linear\",\n",
+    "                        opacity=0.05,\n",
+    "                        strokeWidth=2,\n",
+    "                        stroke=\"red\"\n",
+    "                    )\n",
+    "                    for path in history_paths\n",
+    "                ] if history_paths else []\n",
+    "            )\n",
     "            + [\n",
-    "                path_to_polyline(path, opacity=0.2, strokeWidth=2, stroke=\"green\")\n",
+    "                Plot.line(\n",
+    "                    {\"x\": path.p[:, 0], \"y\": path.p[:, 1]},\n",
+    "                    curve=\"linear\",\n",
+    "                    opacity=0.2,\n",
+    "                    strokeWidth=2,\n",
+    "                    stroke=\"green\"\n",
+    "                )\n",
     "                for path in posterior_paths\n",
     "            ]\n",
     "            + pose_plots(\n",
@@ -2978,7 +2994,9 @@
     "            + Plot.color_map({\n",
     "                samples_label: \"green\",\n",
     "                \"path to be inferred\": \"black\",\n",
-    "            })\n",
+    "            } | (\n",
+    "               {\"culled paths\": \"red\"} if history_paths else {}\n",
+    "            ))\n",
     "        )\n",
     "    )"
    ]
@@ -3131,37 +3149,33 @@
     "        \"\"\"\n",
     "\n",
     "        def __init__(\n",
-    "            self, N: int, end: StateT, samples: genjax.Trace[StateT], indices: IntArray\n",
+    "            self, end: StateT, samples: genjax.Trace[StateT], indices: IntArray, rejuvenated: genjax.Trace[StateT]\n",
     "        ):\n",
-    "            self.N = N\n",
     "            self.end = end\n",
-    "            self.samples = samples\n",
+    "            self.samples = samples.get_retval()\n",
     "            self.indices = indices\n",
+    "            self.rejuvenated = rejuvenated.get_retval()\n",
+    "            self.N = len(end)\n",
+    "            self.T = len(self.rejuvenated)\n",
     "\n",
     "        def flood_fill(self) -> list[list[StateT]]:\n",
-    "            samples = self.samples.get_retval()\n",
-    "            active_paths = [[p] for p in samples[0]]\n",
     "            complete_paths = []\n",
-    "            for i in range(1, len(samples)):\n",
+    "            active_paths = [[p] for p in self.samples[0]]\n",
+    "            for i in range(1, self.T):\n",
     "                indices = self.indices[i - 1]\n",
-    "                counts = jnp.bincount(indices, length=self.N)\n",
     "                new_active_paths = self.N * [None]\n",
-    "                for j in range(self.N):\n",
-    "                    if counts[j] == 0:\n",
+    "                for (j, count) in zip(range(self.N), jnp.bincount(indices, length=self.N)):\n",
+    "                    if count == 0:\n",
     "                        complete_paths.append(active_paths[j])\n",
-    "                    new_active_paths[j] = active_paths[indices[j]] + [samples[i][j]]\n",
+    "                    new_active_paths[j] = active_paths[indices[j]] + [self.samples[i][j]]\n",
     "                active_paths = new_active_paths\n",
-    "\n",
     "            return complete_paths + active_paths\n",
     "\n",
     "        def backtrack(self) -> list[list[StateT]]:\n",
     "            paths = [[p] for p in self.end]\n",
-    "            samples = self.samples.get_retval()\n",
-    "            for i in reversed(range(len(samples))):\n",
-    "                for j in range(len(paths)):\n",
-    "                    paths[j].append(samples[i][self.indices[i][j].item()])\n",
-    "            for p in paths:\n",
-    "                p.reverse()\n",
+    "            for i in reversed(range(self.T - 1)):\n",
+    "                for j in range(self.N):\n",
+    "                    paths[j].insert(0, self.rejuvenated[i][self.indices[i + 1][j]])\n",
     "            return paths\n",
     "\n",
     "\n",
@@ -3187,12 +3201,12 @@
     "                )\n",
     "            else:\n",
     "                rejuvenated, new_log_weights = resamples, jnp.zeros(log_weights.shape)\n",
-    "            return (rejuvenated.get_retval(), new_log_weights), (samples, indices)\n",
+    "            return (rejuvenated.get_retval(), new_log_weights), (samples, indices, rejuvenated)\n",
     "\n",
     "        init_array = jax.tree.map(\n",
     "            lambda a: jnp.broadcast_to(a, (N,) + a.shape), self.init\n",
     "        )\n",
-    "        (end, _), (samples, indices) = jax.lax.scan(\n",
+    "        (end, _), (samples, indices, rejuvenated) = jax.lax.scan(\n",
     "            step,\n",
     "            (init_array, jnp.zeros(N)),\n",
     "            (\n",
@@ -3201,7 +3215,7 @@
     "                self.observations,\n",
     "            ),\n",
     "        )\n",
-    "        return SISwithRejuvenation.Result(N, end, samples, indices)"
+    "        return SISwithRejuvenation.Result(end, samples, indices, rejuvenated)"
    ]
   },
   {
@@ -3229,7 +3243,7 @@
    "id": "151",
    "metadata": {},
    "source": [
-    "Below, totality of sampled partial paths are shown in green, those surviving to the end appearing the thickest, while the ground truth is shown in black."
+    "Below, the paths that died in the sequential resampling are shown in red."
    ]
   },
   {
@@ -3256,19 +3270,15 @@
     "plot_inference_result(\n",
     "    (\"SIS on low motion-deviation data\",),\n",
     "    \"sequential importance resamples\",\n",
-    "    [\n",
-    "        Pose(jnp.array([pose.p for pose in path]), [pose.hd for pose in path])\n",
-    "        for path in sis_result_low.flood_fill()\n",
-    "    ],\n",
-    "    path_low_deviation\n",
+    "    [pytree_transpose(path) for path in sis_result_low.backtrack()],\n",
+    "    path_low_deviation,\n",
+    "    history_paths=[pytree_transpose(path) for path in sis_result_low.flood_fill()]\n",
     ") & plot_inference_result(\n",
     "    (\"SIS on high motion-deviation data\",),\n",
     "    \"sequential importance resamples\",\n",
-    "    [\n",
-    "        Pose(jnp.array([pose.p for pose in path]), [pose.hd for pose in path])\n",
-    "        for path in sis_result_high.flood_fill()\n",
-    "    ],\n",
-    "    path_high_deviation\n",
+    "    [pytree_transpose(path) for path in sis_result_high.backtrack()],\n",
+    "    path_high_deviation,\n",
+    "    history_paths=[pytree_transpose(path) for path in sis_result_high.flood_fill()]\n",
     ")"
    ]
   },
@@ -3411,19 +3421,15 @@
     "plot_inference_result(\n",
     "    (\"SIS without rejuvenation\", \"high motion-deviation data\"),\n",
     "    \"samples\",\n",
-    "    [\n",
-    "        Pose(jnp.array([pose.p for pose in path]), [pose.hd for pose in path])\n",
-    "        for path in sis_result.flood_fill()\n",
-    "    ],\n",
-    "    path_high_deviation\n",
+    "    [pytree_transpose(path) for path in sis_result.backtrack()],\n",
+    "    path_high_deviation,\n",
+    "    history_paths=[pytree_transpose(path) for path in sis_result.flood_fill()]\n",
     ") & plot_inference_result(\n",
     "    (\"SIS with SMCP3 grid rejuvenation\", \"high motion-deviation data\"),\n",
     "    \"samples\",\n",
-    "    [\n",
-    "        Pose(jnp.array([pose.p for pose in path]), [pose.hd for pose in path])\n",
-    "        for path in smcp3_result.flood_fill()\n",
-    "    ],\n",
-    "    path_high_deviation\n",
+    "    [pytree_transpose(path) for path in smcp3_result.backtrack()],\n",
+    "    path_high_deviation,\n",
+    "    history_paths=[pytree_transpose(path) for path in smcp3_result.flood_fill()]\n",
     ")"
    ]
   }
