Final tweaks to `flood_fill`
Terminate `complete_paths` with their `samples` that were orphaned in the resampling.
Otherwise, continue the `active_paths` with their `rejuvenated`s.

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2485,8 +2485,8 @@
     "    \"hd_noise\": (1 / 10) * degrees,\n",
     "}\n",
     "motion_settings_high_deviation = {\n",
-    "    \"p_noise\": 0.5,\n",
-    "    \"hd_noise\": 3 * degrees,\n",
+    "    \"p_noise\": 0.4,\n",
+    "    \"hd_noise\": 2 * degrees,\n",
     "}\n",
     "\n",
     "key, k_low, k_high = jax.random.split(key, 3)\n",
@@ -3160,14 +3160,13 @@
     "\n",
     "        def flood_fill(self) -> list[list[StateT]]:\n",
     "            complete_paths = []\n",
-    "            active_paths = [[p] for p in self.samples[0]]\n",
-    "            for i in range(1, self.T):\n",
-    "                indices = self.indices[i - 1]\n",
+    "            active_paths = self.N * [[]]\n",
+    "            for i in range(self.T):\n",
     "                new_active_paths = self.N * [None]\n",
-    "                for (j, count) in zip(range(self.N), jnp.bincount(indices, length=self.N)):\n",
+    "                for (j, count) in enumerate(jnp.bincount(self.indices[i], length=self.N)):\n",
     "                    if count == 0:\n",
-    "                        complete_paths.append(active_paths[j])\n",
-    "                    new_active_paths[j] = active_paths[indices[j]] + [self.samples[i][j]]\n",
+    "                        complete_paths.append(active_paths[j] + [self.samples[i][j]])\n",
+    "                    new_active_paths[j] = active_paths[self.indices[i][j]] + [self.rejuvenated[i][j]]\n",
     "                active_paths = new_active_paths\n",
     "            return complete_paths + active_paths\n",
     "\n",
@@ -3261,8 +3260,6 @@
     "sis_result_low = localization_sis(\n",
     "    motion_settings_low_deviation, sensor_settings[\"s_noise\"], observations_low_deviation\n",
     ").run(k1, N_particles)\n",
-    "\n",
-    "N_particles = 100\n",
     "sis_result_high = localization_sis(\n",
     "    motion_settings_high_deviation, sensor_settings[\"s_noise\"], observations_high_deviation\n",
     ").run(k2, N_particles)\n",
@@ -3406,7 +3403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_particles = 100\n",
+    "N_particles = 20\n",
     "M_grid = jnp.array([0.5, 0.5, (3 / 10) * degrees])\n",
     "N_grid = jnp.array([15, 15, 15])\n",
     "\n",
