Fix minus sign typo in SMCP3 grid maker

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -3366,7 +3366,7 @@
    "source": [
     "def localization_sis_plus_grid_rejuv(motion_settings, s_noise, M_grid, N_grid, observations):\n",
     "    base_grid = make_poses_grid_array(\n",
-    "        jnp.array([M_grid / 2, M_grid / 2]).T,\n",
+    "        jnp.array([-M_grid / 2, M_grid / 2]).T,\n",
     "        N_grid\n",
     "    )\n",
     "    return SISwithRejuvenation(\n",
