Fix "why we need inference: in numbers"

--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -2721,7 +2721,7 @@
     "\n",
     "We return to how the model offers a numerical benchmark for how good a fit the integrated path is.\n",
     "\n",
-    "In words, the data are incongruously unlikely for the integrated path.  The (log) density of the measurement data, given the integrated path..."
+    "In words, the integrated path has incongruously low likelihood for the data.  The (log) density of the measurement data, given the integrated path..."
    ]
   },
   {
@@ -2748,12 +2748,12 @@
     "trace_path_integrated_observations_low_deviation, log_weight_low = full_model.importance(\n",
     "    k1,\n",
     "    constraints_path_integrated | constraints_low_deviation,\n",
-    "    (motion_settings_low_deviation, sensor_settings[\"s_noise\"]),\n",
+    "    (model_motion_settings, model_sensor_noise),\n",
     ")\n",
     "trace_path_integrated_observations_high_deviation, log_weight_high = full_model.importance(\n",
     "    k2,\n",
     "    constraints_path_integrated | constraints_high_deviation,\n",
-    "    (motion_settings_high_deviation, sensor_settings[\"s_noise\"]),\n",
+    "    (model_motion_settings, model_sensor_noise),\n",
     ")\n",
     "\n",
     "(\n",
@@ -2776,7 +2776,7 @@
     "lines_to_next_cell": 2
    },
    "source": [
-    "...more closely resembles the density of these data back-fitted onto typical (random) paths of the model."
+    "(the `log_weight` reported just above this cell) ...more closely resembles the densities of these data back-fitted onto typical (random) paths of the model, than the (log) densities of data typically produced by the full model run in its natural manner:"
    ]
   },
   {
@@ -2788,37 +2788,42 @@
    "source": [
     "N_samples = 200\n",
     "\n",
-    "key, k1, k2 = jax.random.split(key, 3)\n",
+    "key, k1, k2, k3, k4 = jax.random.split(key, 5)\n",
+    "\n",
     "traces_generated_low_deviation, low_weights = jax.vmap(\n",
     "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
     "    jax.random.split(k1, N_samples),\n",
     "    constraints_low_deviation,\n",
-    "    (motion_settings_low_deviation, sensor_settings[\"s_noise\"]),\n",
+    "    (model_motion_settings, model_sensor_noise),\n",
     ")\n",
     "traces_generated_high_deviation, high_weights = jax.vmap(\n",
     "    full_model.importance, in_axes=(0, None, None)\n",
     ")(\n",
     "    jax.random.split(k2, N_samples),\n",
     "    constraints_high_deviation,\n",
-    "    (motion_settings_high_deviation, sensor_settings[\"s_noise\"]),\n",
+    "    (model_motion_settings, model_sensor_noise),\n",
     ")\n",
     "\n",
-    "low_deviation_paths = jax.vmap(get_path)(traces_generated_low_deviation)\n",
-    "high_deviation_paths = jax.vmap(get_path)(traces_generated_high_deviation)\n",
+    "traces_simulated = jax.vmap(\n",
+    "    full_model.simulate, in_axes=(0, None)\n",
+    ")(\n",
+    "    jax.random.split(k3, N_samples),\n",
+    "    (model_motion_settings, model_sensor_noise),\n",
+    ")\n",
+    "simulated_weights = jax.vmap(\n",
+    "    lambda trace, k: trace.project(k, S[\"steps\", \"sensor\", \"distance\"])\n",
+    ")(traces_simulated, jax.random.split(k4, N_samples))\n",
     "\n",
     "(\n",
-    "    world_plot\n",
-    "    + [\n",
-    "        pose_plots(pose, color=\"green\", opacity=0.1)\n",
-    "        for pose in low_deviation_paths[:20]\n",
-    "    ]\n",
+    "    html(\"likelihoods of low motion-deviation data\")\n",
+    "    | Plot.histogram(values=low_weights, thresholds=10)\n",
     ") & (\n",
-    "    world_plot\n",
-    "    + [\n",
-    "        pose_plots(pose, color=\"green\", opacity=0.1)\n",
-    "        for pose in high_deviation_paths[:20]\n",
-    "    ]\n",
+    "    html(\"likelihoods of high motion-deviation data\")\n",
+    "    | Plot.histogram(values=high_weights, thresholds=10)\n",
+    ") & (\n",
+    "    html(\"likelihoods of random data\")\n",
+    "    | Plot.histogram(values=simulated_weights, thresholds=10)\n",
     ")"
    ]
   },
