Lint theory-exercises

--- a/src/theory-exercises.ipynb
+++ b/src/theory-exercises.ipynb
@@ -26,12 +26,14 @@
     "#     %pip install --quiet keyring keyrings.google-artifactregistry-auth  # type: ignore # noqa\n",
     "#     %pip install --quiet genjax==0.7.0 genstudio==2024.9.7 --extra-index-url https://us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple/  # type: ignore # noqa\n",
     "\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import genjax\n",
-    "from genjax import ChoiceMapBuilder as C\n",
-    "from penzai import pz\n",
-    "import genstudio.plot as Plot"
+    "# fmt: off\n",
+    "import jax                                # noqa: F401\n",
+    "import jax.numpy as jnp                   # noqa: F401\n",
+    "import genjax                             # noqa: F401\n",
+    "from genjax import ChoiceMapBuilder as C  # noqa: F401\n",
+    "from penzai import pz                     # noqa: F401\n",
+    "import genstudio.plot as Plot             # noqa: F401\n",
+    "# fmt: on"
    ]
   },
   {
